--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
     ports:
       - 80:80
       # - 443:443
+      - 8002:8002
+      - 8002:8002/udp
       - 8004:8004
       - 8004:8004/udp
       - 8088:8088
