--- a/nginx.conf
+++ b/nginx.conf
@@ -109,7 +109,7 @@ http {
     #    ssl_prefer_server_ciphers  on;
 
     #    location / {
-    #        root   html;
+    #        root   /usr/local/share/janus/demos/;
     #        index  index.html index.htm;
     #    }
     # }
